test/k8sT/manifests/service-account-deny.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "service-account-deny"
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: app1-account
  ingressDeny:
  - fromEndpoints:
    - matchLabels:
        io.cilium.k8s.policy.serviceaccount: app2-account
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
